--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>Tiper</title>
 </head>
 <body>
 
@@ -26,6 +26,6 @@
 
     </section>
   </section>
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
