--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
     </section>
   </section>
-  <script type="text/javascript" src="js/bundle.js" charset="utf-8"></script>
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
