Restart and play button working for Classic

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section id="page" class="border">
 
     <div id="content">
-      <h4 id="keywatch">CLASSIC</h4>
-      <div id="classic-wrapper" class="white-border">
-        <button id="classic-button" class="white-border">Play!</button>
+      <div id="classic-wrapper" class="border">
+        <h4 id="classic-header">CLASSIC</h4>
+        <button id="classic-button" class="white-border" tabindex="1">Play!</button>
       </div>
     </div>
 
