Classic game functional

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
   <div id="info-bar" class="">
-    <div class="menu-item brand">TIPER</div>
+    <div class="menu-item brand" class="border">TIPER</div>
     <div class="menu-item item-1 hidden-mobile">About</div>
     <div id="info-box-one" class="info-box border hidden-mobile"> Tiper is a powerful tool, and fun game, to increase typing speeds. Have fun while boosting your inner typist!</div>
     <div class="menu-item item-2 hidden-mobile">Donate</div>
@@ -22,7 +22,7 @@
 
     <div id="content">
       <div id="classic-wrapper" class="border">
-        <h4 id="classic-header">CLASSIC</h4>
+        <h4 id="classic-header" >CLASSIC</h4>
         <button id="classic-button" class="white-border" tabindex="1">Play!</button>
       </div>
     </div>
