--- a/index.html
+++ b/index.html
@@ -22,8 +22,27 @@
 
     <div id="content">
       <div id="classic-wrapper" class="border">
-        <h4 id="classic-header" >CLASSIC</h4>
-        <button id="classic-button" class="white-border" tabindex="1">Play!</button>
+        <h4 id="classic-header" class="underline-magic" >CLASSIC</h4>
+        <div id="classic-instructions-box" class="border">
+          <h5 id="classic-instruct-header">
+            To Play:
+          </h5>
+          <p id="classic-instructions">
+            Type the text in the green box below when the timer starts. If you make an error, backspace until the mistake is cleared and the box turns green again.
+          </p>
+        </div>
+        <div id="classic-app" class="border">
+          <div id="classic-status">
+            <i id="classic-play-button" class="underline-magic play-button fa fa-play" aria-hidden="true"></i>
+            <i id="classic-repeat-button" class="underline-magic play-button fa fa-repeat" aria-hidden="true"></i>
+            <p id="classic-go">Ready?</p>
+            <p id="classic-clock">0:00</p>
+          </div>
+          <div id="classic-text-block">
+            <p id="classic-text" class="white-border fine">THis is some really quite interesting text that I love a lot and I am very attached to it because it is really quite interesting and I like lots of pie.</p>
+          </div>
+
+        </div>
       </div>
     </div>
 
